--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,6 @@ html {
     font-family: LexendExa;
 }
 
+@import 'primereact/resources/themes/lara-light-blue/theme.css';
+@import 'primereact/resources/primereact.min.css';
+@import 'primeicons/primeicons.css';
